[gd_scene load_steps=3 format=3 uid="uid://c0gl4kd2653nl"]

[ext_resource type="Script" path="res://scripts/second chance.gd" id="1_s85kc"]
[ext_resource type="AudioStream" uid="uid://dymkj5oxhkxg3" path="res://Assets/audio/kindaCalmAU.wav" id="2_7238f"]

[node name="LeveCellarLvl4Andahalf" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s85kc")

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasGroup"]
offset_left = -6.0
offset_top = -13.0
offset_right = 1163.0
offset_bottom = 665.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup"]
offset_top = 267.0
offset_right = 1152.0
offset_bottom = 654.0

[node name="Label" type="Label" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "YOU WERE CONSUMED BY THE DARKNESS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="continue" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SECOND CHANCE"

[node name="quit" type="Button" parent="CanvasGroup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GIVE UP"

[node name="PanelContainer" type="PanelContainer" parent="CanvasGroup"]
visible = false
offset_top = 174.0
offset_right = 1148.0
offset_bottom = 414.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasGroup/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasGroup/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "ARE YOU SURE?"

[node name="Label2" type="Label" parent="CanvasGroup/PanelContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "(Quiting will take you back to Main Menu, losing all progress)"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasGroup/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="yes" type="Button" parent="CanvasGroup/PanelContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "YES"

[node name="no" type="Button" parent="CanvasGroup/PanelContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "CANCEL"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7238f")
autoplay = true

[connection signal="pressed" from="CanvasGroup/VBoxContainer/continue" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasGroup/VBoxContainer/quit" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasGroup/PanelContainer/VBoxContainer2/HBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasGroup/PanelContainer/VBoxContainer2/HBoxContainer/no" to="." method="_on_no_pressed"]
